Projet GL/Projet_GL/src/test/deca/syntax/invalid/bad_if.deca
// Description:
//    if avec une condtion au else
//
// Resultats:
//    no viable alternative at else ()
//
// Historique:
//    cree le 10/01/2023

{
    if(a){

    } else (b){
        
    }
}
